The polyfill for flexbox on ie9 doesn't actually work... needed to go through and set inline-block to flexbox children so that they display (mostly) correctly on ie9

--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -138,7 +138,6 @@
           width: 100%;
           height: 100%;
           margin: 0 auto;
-          -js-display: flex;
           display: flex;
           justify-content: center;
           .agent-featured-listing {
@@ -160,7 +159,6 @@
   }
 
   .about-text {
-    -js-display: flex;
     display: flex;
     justify-content: space-between;
     padding: 5em 60px;
@@ -208,7 +206,6 @@
     position: relative;
   }
   .agents {
-    // padding: 5em 60px;
     text-align: center;
     .flex-agents {
       justify-content: space-between;
@@ -216,6 +213,7 @@
     }
   }
   .agent {
+    display: inline-block;
     width: 23%;
     min-width: 235px;
     text-align: center;
@@ -447,7 +445,6 @@
             width: 100%;
             height: 100%;
             margin: 0;
-            -js-display: flex;
             display: flex;
             flex-direction: row;
             flex-flow: row wrap;
