--- a/_sass/listing.scss
+++ b/_sass/listing.scss
@@ -123,7 +123,6 @@
   }
 
   .container {
-    -js-display: flex;
     display: flex;
     position: relative;
     z-index: 5;
@@ -247,11 +246,13 @@
   }
 
   #listings-sidebar {
+    display: inline-block;
     width: 33%;
     padding: 0 12px;
   }
 
   #listings-info {
+    display: inline-block;
     width: 66%;
     padding: 0 12px;
   }
