--- a/_sass/mixins.scss
+++ b/_sass/mixins.scss
@@ -2,20 +2,6 @@
   font-size: 1.8em;
   letter-spacing: .5;
 }
-@mixin hamburger-menu {
-  background-color: white;
-  background-image: url(../images/ham-menu.png);
-  background-size: 2em;
-  background-position: center center;
-  background-repeat: no-repeat;
-  padding: 2em;
-  cursor: pointer;
-  z-index: 100;
-  position: fixed;
-  right: 10px;
-  top: 10px;
-  box-shadow: 0px 1px 5px rgba(0,0,0,0.5);
-}
 
 @mixin hamburger-menu {
   background-color: white;
@@ -77,6 +63,7 @@
   background: rgba(86, 85, 84, 0.8);
   .inner {
     overflow: scroll;
+    height: 60%;
     width: 50%;
     margin: 112px auto 0 auto;
     font-size: 1.3em;
